force-app/main/default/objects/Tilak__Expense__c/fields/Tilak__Amount__c.field-meta.xml
<CustomField>
    <fullName>Tilak__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>