force-app/main/default/objects/Tilak__Expense__c/fields/Tilak__Client__c.field-meta.xml
<CustomField>
    <fullName>Tilak__Client__c</fullName>
    <label>Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>