force-app/main/default/objects/Tilak__Expense__c/fields/Tilak__Date__c.field-meta.xml
<CustomField>
    <fullName>Tilak__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>