force-app/main/default/objects/Tilak__Expense__c/fields/Tilak__Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Tilak__Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursed</label>
    <type>Checkbox</type>
</CustomField>