force-app/main/default/objects/Tilak__Expense__c/listViews/Tilak__All.listView-meta.xml
<ListView>
    <fullName>Tilak__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>